spacing bug

--- a/css/nav/nav.scss
+++ b/css/nav/nav.scss
@@ -1,68 +1,55 @@
 $textColour: #EEEDF0;
 
 .navBar{
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 120px;
-    transition: all 0.3s ease;
-    
-    &:before {
-        content: ' ';
-        display: block;
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 0;
-        background-color: #6C72CB;
-        height: 120px;
-        transition: all 0.3s ease;
-    }
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 5em;
+  transition: all 0.3s ease;
 }
 
 ul{
-    list-style: none;
-    a{
-        display: inline-block;
-        text-decoration: none;
-        transition: all 0.3s ease;
-    }
+  list-style: none;
+  a{
+    display: inline-block;
+    text-decoration: none;
+    transition: all 0.3s ease;
+  }
 }
 
 nav {
+  display: flex;
+  justify-content: space-between;
+  padding: 0 25px;
+  height: 100%;
+  .logo {
     display: flex;
-    justify-content: space-between;
-    padding: 0 25px;
+    align-items: center;
+    font-size: 30px;
+    position: relative;
+    z-index: 2;
+  }
+  ul {
+    display: flex;
     height: 100%;
-    .logo {
+    position: relative;
+    li {
       display: flex;
       align-items: center;
-      font-size: 30px;
-      position: relative;
-      z-index: 2;
-    }
-    ul {
-      display: flex;
-      height: 100%;
-      position: relative;
-      li {
-        display: flex;
-        align-items: center;
-        margin: 0 10px;
-        a {
-          &:hover {
-            color: #CB69C1;
-          }
+      margin: 0 10px;
+      a {
+        &:hover {
+          color: #CB69C1;
         }
-      } 
-    }
+      }
+    } 
+  }
 
-    a {
-      color: $textColour;
-      margin: 0 1em;
-      padding: 10px;
-      white-space: nowrap;
-      font-size: 13px;
-    }
+  a {
+    color: $textColour;
+    margin: 0 1em;
+    padding: 10px;
+    white-space: nowrap;
+    font-size: 13px;
+  }
 }
