--- a/css/parallax/parallax.css
+++ b/css/parallax/parallax.css
@@ -12,4 +12,5 @@
   height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
+  z-index: -1;
 }/*# sourceMappingURL=parallax.css.map */
